# lnmarkets-trading-bot

./: .dockerignore  .gitignore  CRUSH.md  Dockerfile  LICENSE  Makefile  README.md  config.json  docker-compose.yml  hello.py  initial_example.py  main.py  opinion.md  pyproject.toml  telegram_utils.py  utils.py
.github/workflows/: deploy.yaml  lint.yaml
scripts/: install_deps.sh  install_docker.sh  install_make.sh
