[project]
name = "lnmarkets-trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ln-markets>=2.0.10",
    "numpy>=2.3.1",
    "pytelegrambotapi>=4.28.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT", "N", "FURB", "FAST", "RUF", "ARG", "PTH"]
ignore = ["PLR0914"]
fixable = ["ALL"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
lint = "uv run ruff check; uv run ruff format --check"
format = "uv run ruff check --fix; uv run ruff format"
models = "uv run -m models.create_models"
post_models = "uv run ruff format models/models_*.py; uv run ruff check --fix models/models_*.py"
